# PokerNow-OpenHandHistory-Converter--Python-

./: .gitignore  .pylintrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Config.ini  Demo_User_Settings_Config_INI_Format.ini  LICENSE  PokerNowToOHH.ipynb  PokerNowToOHH.py  README.md  SudduthM2.2022-10-03-03-15-51.PS.Hand1-169.ohh  gui_test.py  log.txt  main.py  name-map.json  pyproject.toml  requirements.txt  settings.ini
Logs/: log.txt
OHH Exsamples/: Holdem Cash Hand (888).ohh  Omah HiLo Cash Hand (PokerStars).ohh
OpenHandHistory/: PokerNowHandHistory.ohh  poker_now_log_00NNmx_wWaWyhmRHS3NTHC8JO(1).ohh  poker_now_log_00NNmx_wWaWyhmRHS3NTHC8JO.json  poker_now_log_00NNmx_wWaWyhmRHS3NTHC8JO.ohh  poker_now_log_3n1IQ2blkXDqk-xdjwV_LWpiz.json  poker_now_log_3n1IQ2blkXDqk-xdjwV_LWpiz.ohh  poker_now_log_49kwvk-9dEbeA8MXw7lNG9SiD.json  poker_now_log_49kwvk-9dEbeA8MXw7lNG9SiD.ohh  poker_now_log_5IWpLtq8fzMNDa0xHI-OC2NGW.json  poker_now_log_5IWpLtq8fzMNDa0xHI-OC2NGW.ohh  poker_now_log_5MI1t1tFB7u4Y8ECewBVfVK1r.json  poker_now_log_5MI1t1tFB7u4Y8ECewBVfVK1r.ohh  poker_now_log_5SMUIHF2OkP-fid-HSCShMqSZ.json  poker_now_log_5SMUIHF2OkP-fid-HSCShMqSZ.ohh  poker_now_log_6DLkyVJAejZZLcZ2XAUciGkbx.ohh  poker_now_log_Ab5bpfAoGm6TfDrvLptR5AwGv.json  poker_now_log_Ab5bpfAoGm6TfDrvLptR5AwGv.ohh  poker_now_log_Bp8hZ17lInhhl0gaVFg95-DAy.json  poker_now_log_Bp8hZ17lInhhl0gaVFg95-DAy.ohh  poker_now_log_ENZvejPd6aRDxhgszJGoqqQ3C.json  poker_now_log_ENZvejPd6aRDxhgszJGoqqQ3C.ohh  poker_now_log_ETWJia2e9ynk8_nV7yi3RHrQh.json  poker_now_log_ETWJia2e9ynk8_nV7yi3RHrQh.ohh  poker_now_log_HH-7IjgCdHgKxiwI5-M53COrW.json  poker_now_log_HH-7IjgCdHgKxiwI5-M53COrW.ohh  poker_now_log_HzLssBBkr03AUVGJ7iyjQz2fT.json  poker_now_log_HzLssBBkr03AUVGJ7iyjQz2fT.ohh  poker_now_log_IAiFDx7XcGn6anRn5bUHDtRL0.json  poker_now_log_IAiFDx7XcGn6anRn5bUHDtRL0.ohh  poker_now_log_IWeE98nWJfIpXF8fXfANMFLyH.json  poker_now_log_IWeE98nWJfIpXF8fXfANMFLyH.ohh  poker_now_log_JJ32dlwbHcjZS6L7PH01QEUmU.json  poker_now_log_JJ32dlwbHcjZS6L7PH01QEUmU.ohh  poker_now_log_LyZLKlDTalK_BTJbc3jO9wQvN.json  poker_now_log_LyZLKlDTalK_BTJbc3jO9wQvN.ohh  poker_now_log_O-p_9z9-wxUnyMfTU-EaU0wYz.json  poker_now_log_O-p_9z9-wxUnyMfTU-EaU0wYz.ohh  poker_now_log_PkCAeafmmX4w5UI9GqLN1go5i.json  poker_now_log_PkCAeafmmX4w5UI9GqLN1go5i.ohh  (+172 more)
pylintAnalysis/: analysis.json  (+5 more)
(+175 files in other folders)
