[tool.poetry]
name = "pokernow-openhandhistory-converter (python)"
version = "1.3.0"
description = ""
authors = ["Mark Sudduth <sudduth.mark@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pokernow_openhandhistory_converter (python)"}]

[tool.poetry.dependencies]
python = "^3.10"
attrs = "^22.2.0"
rich = "^13.3.4"

[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
