[tool.poetry]
name = "pokernow-openhandhistory-converter (python)"
version = "1.3.0"
description = ""
authors = ["Mark Sudduth <sudduth.mark@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pokernow_openhandhistory_converter (python)"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
attrs = "^22.2.0"
rich = "^13.3.4"
pyqt6 = "^6.5.1"
pyqtgraph = "^0.13.3"
pyside6 = "^6.5.1.1"

[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.18.0"
flake8-pyproject = "^1.2.3"
autopep8 = "^2.0.2"
docformatter = "1.4"
pyformat = "^0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
format = "wemake"
show-source = true
statistics = false
doctests = true
show-violation-links = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
line_length = 100

[tool.autopep8]
max_line_length = 100
aggressive = 3

[tool.docformatter]
recursive = true
wrap-summaries = 100
wrap-descriptions = 100
blank = true

[tool.ruff]
select = ["ALL"]
ignore = []
fixable = ["ALL"]
unfixable = []
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}
line-length = 100
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py38"

[tool.ruff.flake8-quotes]
avoid-escape = true
docstring-quotes = "double"
inline-quotes = "single"
multiline-quotes = "single"


